--- a/index.html
+++ b/index.html
@@ -3,30 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luminus Beauty</title>
+
+  <title>Luminus Beauty | Puder obrve, Osijek</title>
+  <meta name="description" content="Luminus Beauty u Osijeku nudi puder obrve, lip blush, lash lift, brow lift, nokte, piercing i profesionalne edukacije. Rezerviraj svoj termin već danas!" />
+  <meta name="keywords" content="puder obrve Osijek, puder brows Osijek, obrve Osijek, Luminus Beauty, lip blush Osijek, brow lift, lash lift, beauty salon Osijek, edukacije puder obrve" />
+  <meta name="author" content="Luminus Beauty" />
+  
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div class="logo">Luminus Beauty</div>
-    <nav>
-      <ul>
-        <li><a href="#tretmani">Tretmani</a></li>
-        <li><a href="#edukacije">Edukacije</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
-      </ul>
-    </nav>
+    <h1>Luminus Beauty</h1>
+    <p class="tagline">You, but better</p>
   </header>
 
-  <section class="hero">
-    <h1>YOU, BUT BETTER</h1>
-    <p>Tvoje mjesto za ljepotu, stručnost i eleganciju.</p>
-  </section>
-
-  <section id="tretmani" class="content-section">
-    <h2>Tretmani u ponudi</h2>
-    <ul class="list">
+  <section class="services">
+    <h2>Naše usluge</h2>
+    <ul>
       <li>Puder obrve</li>
       <li>Lip blush</li>
       <li>Lash lift</li>
@@ -37,20 +30,20 @@
     </ul>
   </section>
 
-  <section id="edukacije" class="content-section">
+  <section class="education">
     <h2>Edukacije</h2>
-    <ul class="list">
-      <li>Edukacija za puder obrve</li>
-      <li>Edukacija za lip blush</li>
-      <li>Edukacija za lash & brow lift</li>
-      <li>Edukacije za tetoviranje</li>
+    <ul>
+      <li>Puder obrve</li>
+      <li>Lip blush</li>
+      <li>Lash & Brow lift</li>
+      <li>Tetoviranje</li>
     </ul>
   </section>
 
-  <section id="kontakt" class="contact-section">
+  <section class="contact">
     <h2>Kontakt</h2>
-    <p><strong>Telefon:</strong> <a href="tel:0998696029">099 869 6029</a></p>
-    <p><strong>Email:</strong> <a href="mailto:antonia.sorda@icloud.com">antonia.sorda@icloud.com</a></p>
+    <p>📞 099 869 6029</p>
+    <p>📧 antonia.sorda@icloud.com</p>
   </section>
 
   <footer>
