--- a/index.html
+++ b/index.html
@@ -9,11 +9,78 @@
   <meta name="keywords" content="puder obrve Osijek, puder brows Osijek, obrve Osijek, Luminus Beauty, lip blush Osijek, brow lift, lash lift, beauty salon Osijek, edukacije puder obrve" />
   <meta name="author" content="Luminus Beauty" />
   
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+      background-color: #f9f9f9;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    header h1 {
+      text-transform: uppercase;
+      letter-spacing: 4px;
+      font-weight: 700;
+      font-size: 2.5rem;
+      margin-bottom: 0.2em;
+    }
+    header nav {
+      font-weight: 500;
+      font-size: 1rem;
+      color: #555;
+      margin-bottom: 0.3em;
+    }
+    header p.tagline {
+      font-weight: 300;
+      font-size: 0.8rem;
+      color: #888;
+      margin-top: 0;
+    }
+    section {
+      max-width: 600px;
+      margin: 0 auto 40px auto;
+    }
+    section h2 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 8px;
+      margin-bottom: 20px;
+      font-weight: 700;
+    }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+      font-weight: 500;
+      color: #444;
+    }
+    ul li {
+      padding: 6px 0;
+      border-bottom: 1px solid #eee;
+    }
+    ul li:last-child {
+      border-bottom: none;
+    }
+    section.contact p {
+      font-weight: 600;
+      font-size: 1.1rem;
+      margin: 8px 0;
+    }
+    footer {
+      text-align: center;
+      color: #aaa;
+      font-size: 0.9rem;
+      margin-top: 60px;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Luminus Beauty</h1>
+    <h1>LUMINUS BEAUTY</h1>
+    <nav>TRETMANI &nbsp;|&nbsp; EDUKACIJE &nbsp;|&nbsp; KONTAKT</nav>
     <p class="tagline">You, but better</p>
   </header>
 
