--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <div class="services">
     <div class="service">
-      <a href="puder-obrve.html" class="service-header">Puder obrve</a>
+      <li><a href="puder-obrve.html">Puder obrve</a></li>
     </div>
     <div class="service">
       <a href="lip-blush.html" class="service-header">Lip Blush – polutrajna šminka usana</a>
