--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
       overflow: hidden;
       white-space: nowrap;
       box-sizing: border-box;
+      font-family: 'Montserrat', sans-serif;
     }
     .marquee span {
       display: inline-block;
       padding-left: 100%;
       animation: marquee 15s linear infinite;
+      font-family: 'Montserrat', sans-serif;
     }
     @keyframes marquee {
       0%   { transform: translate(0, 0); }
@@ -35,14 +37,16 @@
       background-color: #fff;
       padding: 20px 20px 10px 20px;
       border-bottom: 1px solid #ddd;
+      font-family: 'Montserrat', sans-serif;
     }
     header h1 {
       margin: 0;
       font-weight: 700;
-      font-size: 36px;
+      font-size: 42px;
       text-transform: uppercase;
       letter-spacing: 2px;
       color: #2c2c2c;
+      font-family: 'Montserrat', sans-serif;
     }
     nav {
       margin-top: 10px;
@@ -50,54 +54,65 @@
       gap: 30px;
       font-weight: 600;
       font-size: 14px;
+      font-family: 'Montserrat', sans-serif;
     }
     nav a {
       color: #444;
       text-decoration: none;
       cursor: pointer;
+      font-family: 'Montserrat', sans-serif;
     }
     nav a:hover {
       color: #000;
       text-decoration: underline;
+      font-family: 'Montserrat', sans-serif;
     }
     section {
       padding: 40px 20px 40px 20px;
+      font-family: 'Montserrat', sans-serif;
     }
     section h2 {
       font-weight: 700;
       font-size: 24px;
       margin: 0 0 10px 0;
       text-align: left;
+      font-family: 'Montserrat', sans-serif;
     }
     .line {
       width: 100%;
       height: 2px;
       background-color: #c1beba;
       margin-bottom: 30px;
+      font-family: 'Montserrat', sans-serif;
     }
     ul {
       list-style: none;
       padding: 0;
       margin: 0 0 40px 0;
+      font-family: 'Montserrat', sans-serif;
     }
     ul li {
       margin-bottom: 12px;
       font-size: 16px;
+      font-family: 'Montserrat', sans-serif;
     }
     ul li a {
       color: #555;
       text-decoration: none;
       cursor: pointer;
+      font-family: 'Montserrat', sans-serif;
     }
     ul li a:hover {
       color: #000;
       text-decoration: underline;
+      font-family: 'Montserrat', sans-serif;
     }
     footer {
       background-color: #e0ddd9;
       padding: 20px;
       font-size: 14px;
       color: #222;
+      font-family: 'Montserrat', sans-serif;
     }
   </style>
 </head>
