--- a/index.html
+++ b/index.html
@@ -4,40 +4,41 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>LUMINUS BEAUTY</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
-      margin: 0; padding: 0;
+      margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #f7f6f4;
-      color: #333;
+      background-color: #f8f7f5;
+      color: #2c2c2c;
     }
-    .marquee {
-      background-color: #e0ddd9;
-      color: #000;
-      font-weight: 600;
+    /* Gornja traka s adresom */
+    #marquee {
+      background-color: #e3e3e3;
+      color: #555;
+      padding: 8px 0;
       font-size: 14px;
-      padding: 10px 0;
       overflow: hidden;
       white-space: nowrap;
       box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
     }
-    .marquee span {
+    #marquee p {
       display: inline-block;
       padding-left: 100%;
       animation: marquee 15s linear infinite;
-      font-family: 'Montserrat', sans-serif;
+      margin: 0;
     }
     @keyframes marquee {
-      0%   { transform: translate(0, 0); }
-      100% { transform: translate(-100%, 0); }
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
     }
+
     header {
-      background-color: #fff;
-      padding: 20px 20px 10px 20px;
-      border-bottom: 1px solid #ddd;
-      font-family: 'Montserrat', sans-serif;
+      text-align: center;
+      padding: 20px 10px 5px;
+      background-color: white;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      user-select: none;
     }
     header h1 {
       margin: 0;
@@ -46,79 +47,84 @@
       text-transform: uppercase;
       letter-spacing: 2px;
       color: #2c2c2c;
-      font-family: 'Montserrat', sans-serif;
+      white-space: nowrap; /* NE dozvoli prijelom */
     }
     nav {
       margin-top: 10px;
-      display: flex;
-      gap: 30px;
-      font-weight: 600;
-      font-size: 14px;
-      font-family: 'Montserrat', sans-serif;
     }
     nav a {
-      color: #444;
+      margin: 0 15px;
       text-decoration: none;
-      cursor: pointer;
-      font-family: 'Montserrat', sans-serif;
+      color: #555;
+      font-weight: 700;
+      font-size: 14px;
+      letter-spacing: 1px;
+      transition: color 0.3s ease;
     }
     nav a:hover {
-      color: #000;
-      text-decoration: underline;
-      font-family: 'Montserrat', sans-serif;
+      color: #b47b4f;
     }
+
+    main {
+      max-width: 960px;
+      margin: 30px auto;
+      padding: 0 15px;
+    }
+
     section {
-      padding: 40px 20px 40px 20px;
-      font-family: 'Montserrat', sans-serif;
+      margin-bottom: 50px;
     }
     section h2 {
+      border-bottom: 2px solid #b47b4f;
+      padding-bottom: 6px;
+      margin-bottom: 20px;
       font-weight: 700;
       font-size: 24px;
-      margin: 0 0 10px 0;
-      text-align: left;
-      font-family: 'Montserrat', sans-serif;
+      color: #4a4a4a;
     }
-    .line {
-      width: 100%;
-      height: 2px;
-      background-color: #c1beba;
-      margin-bottom: 30px;
-      font-family: 'Montserrat', sans-serif;
+
+    /* Popis usluga */
+    ul.services-list {
+      list-style-type: none;
+      padding-left: 0;
     }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0 0 40px 0;
-      font-family: 'Montserrat', sans-serif;
-    }
-    ul li {
+    ul.services-list li {
       margin-bottom: 12px;
-      font-size: 16px;
-      font-family: 'Montserrat', sans-serif;
-    }
-    ul li a {
-      color: #555;
-      text-decoration: none;
+      font-size: 18px;
       cursor: pointer;
-      font-family: 'Montserrat', sans-serif;
+      color: #2c2c2c;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 8px;
     }
-    ul li a:hover {
-      color: #000;
-      text-decoration: underline;
-      font-family: 'Montserrat', sans-serif;
+    ul.services-list li:hover {
+      color: #b47b4f;
     }
-    footer {
-      background-color: #e0ddd9;
-      padding: 20px;
-      font-size: 14px;
-      color: #222;
-      font-family: 'Montserrat', sans-serif;
+
+    /* Kontakt */
+    #kontakt p, #kontakt a {
+      font-size: 16px;
+      color: #2c2c2c;
+      text-decoration: none;
+      display: block;
+      margin-bottom: 10px;
     }
+    #kontakt a:hover {
+      color: #b47b4f;
+    }
+
+    /* O nama */
+    #onama p {
+      font-size: 16px;
+      line-height: 1.5;
+      color: #4a4a4a;
+    }
+
   </style>
 </head>
 <body>
-
-  <div class="marquee"><span>Ulica Svete Ane 10, Osijek</span></div>
+  <div id="marquee">
+    <p>Svete Ane 10, Osijek • Svete Ane 10, Osijek • Svete Ane 10, Osijek •</p>
+  </div>
 
   <header>
     <h1>LUMINUS BEAUTY</h1>
@@ -130,47 +136,41 @@
     </nav>
   </header>
 
-  <section id="tretmani">
-    <h2>Tretmani</h2>
-    <div class="line"></div>
-    <ul>
-      <li><a href="puder-obrve.html">Puder obrve</a></li>
-      <li><a href="lip-blush.html">Lip blush</a></li>
-      <li><a href="lash-lift.html">Lash lift</a></li>
-      <li><a href="brow-lift.html">Brow lift</a></li>
-      <li><a href="#">Tetoviranje</a></li>
-      <li><a href="#">Nokti</a></li>
-      <li><a href="#">Piercing</a></li>
-    </ul>
-  </section>
+  <main>
+    <section id="tretmani">
+      <h2>TRETMANI</h2>
+      <ul class="services-list">
+        <li><a href="puder-obrve.html">Puder obrve</a></li>
+        <li><a href="lip-blush.html">Lip blush</a></li>
+        <li><a href="lash-lift.html">Lash lift</a></li>
+        <li><a href="brow-lift.html">Brow lift</a></li>
+        <li><a href="tetoviranje.html">Tetoviranje</a></li>
+        <li><a href="nokti.html">Nokti</a></li>
+        <li><a href="piercing.html">Piercing</a></li>
+      </ul>
+    </section>
 
-  <section id="edukacije">
-    <h2>Edukacije</h2>
-    <div class="line"></div>
-    <ul>
-      <li><a href="#">Edukacije za puder obrve</a></li>
-      <li><a href="#">Edukacija za lip blush</a></li>
-      <li><a href="#">Edukacija za lash & brow lift</a></li>
-      <li><a href="#">Edukacije za tetoviranje</a></li>
-    </ul>
-  </section>
+    <section id="edukacije">
+      <h2>EDUKACIJE</h2>
+      <ul class="services-list">
+        <li><a href="edukacija-puder-obrve.html">Edukacije za puder obrve</a></li>
+        <li><a href="edukacija-lip-blush.html">Edukacija za lip blush</a></li>
+        <li><a href="edukacija-lash-brow-lift.html">Edukacija za lash & brow lift</a></li>
+        <li><a href="edukacija-tetoviranje.html">Edukacije za tetoviranje</a></li>
+      </ul>
+    </section>
 
-  <section id="onama">
-    <h2>O nama</h2>
-    <div class="line"></div>
-    <p>Dobrodošli u Luminus Beauty – mjesto gdje prirodna ljepota i stručnost idu ruku pod ruku. Naš cilj je pružiti ti tretmane i edukacije najviše kvalitete u opuštenoj i elegantnoj atmosferi. Obrati nam se s povjerenjem i prepusti se rukama profesionalaca.</p>
-  </section>
+    <section id="onama">
+      <h2>O NAMA</h2>
+      <p>Dobrodošli u Luminus Beauty – mjesto gdje ljepota dolazi do izražaja kroz stručno i posvećeno njegovanje svakog detalja. Naš tim iskusnih profesionalaca pruža vrhunske tretmane i edukacije prilagođene vašim potrebama. Posjetite nas i doživite luksuzan, a opet ugodan ambijent koji čini svaku posjetu posebnim iskustvom.</p>
+    </section>
 
-  <section id="kontakt">
-    <h2>Kontakt</h2>
-    <div class="line"></div>
-    <p>Telefon: 0998696029</p>
-    <p>Email: antonia.sorda@icloud.com</p>
-  </section>
-
-  <footer>
-    &copy; 2025 Luminus Beauty. Sva prava pridržana.
-  </footer>
-
+    <section id="kontakt">
+      <h2>KONTAKT</h2>
+      <p>📞 <a href="tel:0998696029">0998696029</a></p>
+      <p>✉️ <a href="mailto:antonia.sorda@icloud.com">antonia.sorda@icloud.com</a></p>
+      <p>📍 Svete Ane 10, Osijek</p>
+    </section>
+  </main>
 </body>
 </html>
