--- a/index.html
+++ b/index.html
@@ -177,5 +177,5 @@
 
     <section id="kontakt">
       <h2>KONTAKT</h2>
-      <p>📞 <a href="tel:0998696029">0998696029</a></p>
-      <p>✉️ <a href="mailto
+      <p>📞 <a href="tel: +385998696029">+385 998696029</a></p>
+      <p>✉️ <a href="mailto : antonia.sorda@icloud.com
