--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
   <title>LUMINUS BEAUTY</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
-    }
-
     body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
       background-color: #f8f7f5;
       color: #2c2c2c;
     }
-
+    /* Gornja traka s adresom */
     #marquee {
       background-color: #e3e3e3;
       color: #555;
@@ -25,14 +20,14 @@
       font-size: 14px;
       overflow: hidden;
       white-space: nowrap;
+      box-sizing: border-box;
     }
-
     #marquee p {
       display: inline-block;
       padding-left: 100%;
       animation: marquee 15s linear infinite;
+      margin: 0;
     }
-
     @keyframes marquee {
       0% { transform: translateX(0); }
       100% { transform: translateX(-100%); }
@@ -43,9 +38,10 @@
       padding: 20px 10px 5px;
       background-color: white;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      user-select: none;
     }
-
     header h1 {
+      margin: 0;
       font-weight: 700;
       font-size: 42px;
       text-transform: uppercase;
@@ -54,33 +50,40 @@
       white-space: nowrap;
     }
 
+    /* Navigacija ispod naslova */
     nav {
       margin-top: 10px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #555;
       font-weight: 700;
       font-size: 14px;
       letter-spacing: 1px;
-      margin: 0 5px;
+      user-select: none;
+      color: #2c2c2c;
     }
-
+    nav a {
+      text-decoration: none;
+      color: #2c2c2c;
+      cursor: pointer;
+      margin: 0 8px;
+      transition: color 0.3s ease;
+    }
     nav a:hover {
       color: #b47b4f;
+    }
+    nav a:not(:last-child)::after {
+      content: " |";
+      color: #2c2c2c;
+      margin-left: 8px;
     }
 
     main {
       max-width: 960px;
-      margin: 30px auto;
+      margin: 30px auto 60px;
       padding: 0 15px;
     }
 
     section {
       margin-bottom: 50px;
     }
-
     section h2 {
       border-bottom: 2px solid #b47b4f;
       padding-bottom: 6px;
@@ -90,58 +93,65 @@
       color: #4a4a4a;
     }
 
+    /* Popis usluga */
     ul.services-list {
       list-style-type: none;
+      padding-left: 0;
     }
-
     ul.services-list li {
       margin-bottom: 12px;
       font-size: 18px;
-      cursor: pointer;
       color: #2c2c2c;
       border-bottom: 1px solid #ddd;
       padding-bottom: 8px;
+      cursor: default;
     }
-
-    ul.services-list li:hover {
-      color: #b47b4f;
-    }
-
     ul.services-list li a {
       text-decoration: none;
       color: inherit;
+      transition: color 0.3s ease;
+    }
+    ul.services-list li a:hover {
+      color: #b47b4f;
     }
 
+    /* Kontakt */
     #kontakt p, #kontakt a {
       font-size: 16px;
       color: #2c2c2c;
       text-decoration: none;
-      display: block;
       margin-bottom: 10px;
+      display: block;
     }
-
     #kontakt a:hover {
       color: #b47b4f;
     }
 
+    /* O nama */
+    #onama {
+      max-width: 700px;
+      margin: 0 auto 50px;
+      padding: 0 15px;
+    }
     #onama p {
       font-size: 16px;
       line-height: 1.5;
       color: #4a4a4a;
+      margin: 0;
     }
-
   </style>
 </head>
 <body>
+
   <div id="marquee">
-    <p>Svete Ane 10, Osijek • Svete Ane 10, Osijek • Svete Ane 10, Osijek •</p>
+    <p>Ulica Svete Ane 10 • Ulica Svete Ane 10 • Ulica Svete Ane 10 •</p>
   </div>
 
   <header>
     <h1>LUMINUS BEAUTY</h1>
     <nav>
-      <a href="#tretmani">TRETMANI</a> |
-      <a href="#edukacije">EDUKACIJE</a> |
+      <a href="#tretmani">TRETMANI</a>
+      <a href="#edukacije">EDUKACIJE</a>
       <a href="#kontakt">KONTAKT</a>
     </nav>
   </header>
@@ -170,12 +180,17 @@
       </ul>
     </section>
 
+    <section id="kontakt">
+      <h2>KONTAKT</h2>
+      <p>📞 <a href="tel:0998696029">0998696029</a></p>
+      <p>✉️ <a href="mailto:antonia.sorda@icloud.com">antonia.sorda@icloud.com</a></p>
+      <p>📍 Ulica Svete Ane 10</p>
+    </section>
+
     <section id="onama">
       <h2>O NAMA</h2>
       <p>Dobrodošli u Luminus Beauty – mjesto gdje ljepota dolazi do izražaja kroz stručno i posvećeno njegovanje svakog detalja. Naš tim iskusnih profesionalaca pruža vrhunske tretmane i edukacije prilagođene vašim potrebama. Posjetite nas i doživite luksuzan, a opet ugodan ambijent koji čini svaku posjetu posebnim iskustvom.</p>
     </section>
-
-    <section id="kontakt">
-      <h2>KONTAKT</h2>
-      <p>📞 <a href="tel: +385998696029">+385 998696029</a></p>
-      <p>✉️ <a href="mailto : antonia.sorda@icloud.com
+  </main>
+</body>
+</html>
